tests/custom/STARIS_2022/basic/enum-spaces-error/stderr.expected
Error:
    enum-spaces.essence:2:43:
  |
2 | letting numbers be new type enum {one, tw o, three}
  |                                           ^
Missing ,

